<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/linear_layout_background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/serverImagePosterImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ImageView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/playersCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="2dp"
                android:fontFamily="@font/tt_norms_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14dp"></TextView>

            <TextView

                android:id="@+id/pingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/round_rss_feed_24"
                android:drawablePadding="2dp"
                android:fontFamily="@font/tt_norms_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14dp"></TextView>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"
                    android:text="@string/server_info_name"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/serverTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"
                    android:text="@string/server_info_map_name"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/serverMapTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"
                    android:text="@string/server_info_version"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/serverVersionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"
                    android:text="@string/is_need_update"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/serverIsUpdatedClientTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/tt_norms_bold"

                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="italic"></TextView>
            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/matreshka_primary"
            android:layout_height="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/tt_norms_bold"
            android:text="@string/nickname"

            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"></TextView>

        <EditText
            android:textColor="@color/white"
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:id="@+id/nickNameEditText"
            android:layout_gravity="center"></EditText>

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/play"
            android:id="@+id/playButton"
            android:textColor="@color/white"
            android:layout_height="wrap_content"></Button>

    </LinearLayout>
</RelativeLayout>